2009-09-22  Juanma Barranquero  <lekktu@gmail.com>

	* NEWS: Mention new variable `help-downcase-arguments'
	and new default for arguments in *Help* buffers.

2009-09-15  Juanma Barranquero  <lekktu@gmail.com>

	* NEWS: Mention new behavior of -Q and new variable
	`inhibit-x-resources'.

2009-09-13  Chong Yidong  <cyd@stupidchicken.com>

	* PROBLEMS: Document Athena/Lucid internationalization
	problem (Bug#4333).

2009-09-02  Carsten Dominik  <dominik@u016822.science.uva.nl>

	* refcards/orgcard.tex: Document new effort setting commands.
	Document the new keys for agenda time motion.
	Document the `E' key in the agenda.

2009-08-29  Stefan Monnier  <monnier@iro.umontreal.ca>

	* NEWS: Declare unibyte sessions obsolete.

2009-08-28  Michael Albinus  <michael.albinus@gmx.de>

	* NEWS: Mention Tramp connection method "rsyncc" and variable
	`process-file-side-effects'.

2009-08-13  Kenichi Handa  <handa@m17n.org>

	* NEWS: Mention the new coding systme `utf-8-hfs' and many
	functions for Unicode normalization.

2009-08-09  CHENG Gao  <chenggao@gmail.com>

	* MORE.STUFF: Update Etags and Ispell URLs.

2009-08-08  Dmitry Dzhus <dima@sphinx.net.ru>

	* images/gud/all.xpm, images/gud/thread.xpm: New icons for
	gdb-mi.el

2009-08-07  Dan Nicolaescu  <dann@ics.uci.edu>

	* e/eterm-color.ti (msgr, u6, u7): New capabilities.

2009-08-02  Michael Albinus  <michael.albinus@gmx.de>

	* NEWS: Autorevert Tail mode works now for remote files.

2009-07-26  Kevin Ryde  <user42@zip.com.au>

	* compilation.txt: Add Perl-Glib sample message.

2009-07-23  Ken Raeburn  <raeburn@raeburn.org>

	* NEWS: `load-in-progress' corruption fixed.

2009-07-21  Glenn Morris  <rgm@gnu.org>

	* refcards/cs-dired-ref.tex, refcards/dired-ref.tex:
	* refcards/fr-dired-ref.tex, refcards/sk-dired-ref.tex:
	* refcards/cs-refcard.tex, refcards/de-refcard.tex:
	* refcards/fr-refcard.tex, refcards/pl-refcard.tex:
	* refcards/pt-br-refcard.tex, refcards/refcard.tex: